<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_your_details">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_trans2"
        android:id="@+id/title_action_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Step 1: Your Details"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/toolbar_title"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:id="@+id/next_button"
                android:src="@drawable/next"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/action_bar_title"
        android:layout_below="@+id/title_action_bar"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_edit_text"
            android:id="@+id/first_name_et"
            android:hint="@string/first_name_hint"
            android:textColorHint="@color/hint"
            android:textColor="@color/blue"
            android:inputType="textCapWords"
            android:maxLength="15"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_edit_text"
            android:layout_below="@+id/first_name_et"
            android:id="@+id/last_name_et"
            android:hint="@string/last_name_hint"
            android:textColorHint="@color/hint"
            android:textColor="@color/blue"
            android:inputType="textCapWords"
            android:maxLength="15"
            android:paddingTop="12dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_edit_text"
            android:layout_below="@+id/last_name_et"
            android:id="@+id/email_address_et"
            android:hint="@string/email_address_hint"
            android:textColorHint="@color/hint"
            android:textColor="@color/blue"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:paddingTop="12dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_edit_text"
            android:layout_below="@+id/email_address_et"
            android:id="@+id/date_birth_et"
            android:hint="@string/date_birth_hint"
            android:textColorHint="@color/hint"
            android:textColor="@color/blue"
            android:inputType="date"
            android:paddingTop="12dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_edit_text"
            android:layout_below="@+id/date_birth_et"
            android:id="@+id/password_et"
            android:hint="@string/password_hint"
            android:textColorHint="@color/hint"
            android:textColor="@color/blue"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingTop="12dp"/>

    </RelativeLayout>

</RelativeLayout>